# doplusplus

./: .gitignore  CMakeLists.txt  main.cpp
Data/: tasks.json
src/models/: Task.cpp  Task.h
src/utils/: Json.cpp  Json.h  Line.cpp  Line.h  UI.cpp  UI.h
